crates/stc_ts_file_analyzer/tests/pass/types/intersection/intersectionReductionStrict/6.ts
// @strict: true

type Container<Type extends string> = {
  type: Type;
};

const f4 = (
  t: number | (Container<"b"> & { dataB: boolean } & Container<"a">)
): number => t;
