crates/stc_ts_file_analyzer/tests/errors/conformance/types/union/withIndexSignature/4.ts
//@strict: true

const sym = Symbol();
type Both =
  | { s: number; "0": number; [sym]: boolean }
  | { [n: number]: number; [s: string]: string | number };
declare var both: Both;

both[sym] = "not ok";
